CHUKWA-771.  Improved code quality issue identified by findbugs.  (Eric Yang)